tabla y colorear agregados

--- a/libro/pages/01portada.html
+++ b/libro/pages/01portada.html
@@ -1,16 +1,16 @@
 {% extends 'layout.html' %} {% load static %} {% block content1 %}
-<img src="{% static 'img/portada.png' %}" class="imgcentral" />
+<img src="{% static 'img/portada.png' %}" class="imgcentral img-fluid" />
 
 {% endblock %} {% block content2 %}
-<img src="{% static 'img/portada2.png' %}" class="imgcentral" />
+<img src="{% static 'img/portada2.png' %}" class="imgcentral img-fluid" />
 
-<p class="center"><strong>
+<p class="center text-wrap"><strong>
   Cuando compartimos los regalos de la vida, estos se hacen <br />
   más valiosos. Hoy queremos dejar este legado para todos <br />
   aquellos que con amor buscan impregnar la vida de magia <br />
   y alimentar su ser, para su crecimiento y evolución.
   <br />
-  <span class="cursiva-media"
+  <span class="cursiva-media text-wrap"
     >Maricela García Alvarez, Gonzalo Álvarez Árias y Juan Arroyave</span>
 </p>
 
