--- a/libro/pages/53-fuego04.html
+++ b/libro/pages/53-fuego04.html
@@ -9,13 +9,16 @@
 {% endblock imagenCentral%} {% block content1 %}
 
 <div style="width: 85%">
-  <p>
+  <style>
+    p{text-align: center;}
+  </style>
+  <p >
     Son los deseos que hay en lo más profundo de tu corazón y para poder
     cumplirlas debes ir alcanzando una serie de objetivos, que te irán acercando
     cada vez más a tus metas.
   </p>
   <p>
-    Antes de definirlas, recuerda que estas deben ser: <br>
+    <span class="cursiva-media" style="font-size: 30px; font-weight:600" >Antes de definirlas, recuerda que estas deben ser:</span> <br>
      • Específicas (concretamente referidas a algo perfectamente definido) • Que contengan una
     fecha de realización. <br>
      • Medibles <br> • Alcanzables <br> • Retadoras <br> • Ecológicas (no
@@ -25,11 +28,11 @@
     sea, tu visión).
   </p>
   <p>Según cómo sean tus metas, las puedes llevar a cabo en períodos de tiempo como, por ejemplo: <br>
-    •	Diariamente <br>
-    •	Semanalmente <br>
-    •	Mensualmente <br>
-    •	Semestralmente <br>
-    •	Anualmente <br>
+    Diariamente <br>
+    Semanalmente <br>
+    Mensualmente <br>
+    Semestralmente <br>
+  	Anualmente <br>
     </p>
 </div>
 
@@ -38,10 +41,10 @@
 <div style="margin-top: 0%; margin-bottom: 0%; ">
  <h3 class="cursiva-media" style="text-align: center;">Seguimiento a mis metas</h3>
 </div>
-<div style="background-color: rgb(186, 43, 11); color:rgb(207, 176, 51); width:85%;">
-  <p style="text-align: center;">Es de vital importancia hacer seguimiento a tus metas, ya que lo que no se mide no se controla. Para realizar la siguiente actividad puedes regresar al principio del libro al cuestionario de autodimensión y planear sobre los puntos que te dieron menor puntaje. </p>
+<div style="background-color: rgb(186, 43, 11); color:rgb(207, 176, 51); width:75%; z-index:5; " >
+  <p style="text-align: center; margin-left:10%;">Es de vital importancia hacer seguimiento a tus metas, ya que lo que no se mide no se controla. Para realizar la siguiente actividad puedes regresar al principio del libro al cuestionario de autodimensión y planear sobre los puntos que te dieron menor puntaje. </p>
 
-  <p style="font-family: 'Amatic SC'; font-size:30px; text-align:center">
+  <p style="font-family: 'Amatic SC'; font-size:30px; text-align:center; font-weight:600; margin-left:10%;">
 
     Una sugerencia: puedes visualizar cada una de las metas con una foto o un dibujo que represente lo que esperas lograr, y tendrás a la vista cada día esta imagen mientras piensas y sientes cuánto vas avanzando y qué debes hacer para seguir alcanzando tus sueños.
   </p>
